<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VTX Player</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="text_input">This is a EditText component. </string>
    <string name="title_activity_display_message">Message From . . .</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="warning">Warning</string>
    
    <string name="no_wifi_message">You are in 2G/3G connection, are you sure you want to continue?</string>

    <!--  -->
    <string name="okLabel">OK</string>
    <string name="cancelLabel">Cancel</string>
    
    <!-- activity_main -->
    <string name="main_title">Main Panel</string>
    <string name="main_view_video">View Video</string>
    <string name="video_list_tab_title">Videos</string>
    <string name="playlist_tab_title">PlayLists</string>
    
    <!-- activity_login -->
    <string name="login_title">Login Panel</string>
    <string name="login_user_name">UserName</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_default_email">sifang@163.com</string>
    <string name="login_default_password">111111</string>
    <string name="image_desc">Image</string>
    
    <!-- activity_view_video -->
    <string name="view_video_title">View Video Title</string>
    <string name="button_desc">Button</string>
    <string name="play_time_default">00:00:00/00:00:00</string>

    
    
</resources>
